--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,10 @@
   --secondary-color: #f99500;
   --light-color: #f3f3f3;
   --dark-color: #333;
-  --max-width: 1400px;
-}
-
-.category {
   --sports-color: #f99500;
   --ent-color: #a66bbe;
   --tech-color: #009cff;
-  font-size: 0.55rem;
-  padding: 0.5rem;
-  border-radius: 15px;
-  color: #fff;
-  margin-bottom: 0.5rem;
+  --max-width: 1400px;
 }
 
 
@@ -59,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 .container {
   max-width: var(--max-width);
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 2rem;
   overflow: hidden;
 }
 
@@ -73,6 +65,46 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
+.category {
+  font-size: 0.65rem;
+  display: inline-block;
+  padding: 0.5rem 0.75rem;
+  border-radius: 15px;
+  color: #fff;
+  margin: 0.5rem 0;
+}
+
+.category-sports {
+  background: var(--sports-color);
+}
+
+.category-ent {
+  background: var(--ent-color);
+}
+
+.category-tech {
+  background: var(--tech-color);
+}
+
+.bg-dark {
+  background: var(--dark-color);
+  color: #fff;
+}
+
+.bg-primary {
+  background: var(--primary-color);
+  color: #fff;
+}
+
+.bg-light {
+  background: #fff;
+}
+
+.card {
+  padding: 1rem;
+}
+
+
 /* Main Nav */
 
 #main-nav {
@@ -83,7 +115,11 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-.logo {
+#main-nav .container {
+  padding: 0 2rem;
+}
+
+#main-nav .logo {
   width: 180px;
   margin: 1rem auto 0.5rem;
 }
@@ -110,7 +146,7 @@ h1, h2, h3, h4, h5, h6 {
 /* showcase */
 
 #showcase {
-  background: linear-gradient(rgba(51, 51, 51, 0.5), rgba(51, 51, 51, 0.5)),
+  background: linear-gradient(rgba(51, 51, 51, 0.7), rgba(51, 51, 51, 0.7)),
               url(../img/featured.jpg) no-repeat center/cover;
   height: 520px;
   color: #fff;
@@ -122,28 +158,99 @@ h1, h2, h3, h4, h5, h6 {
 
 .showcase-content {
   justify-content: center;
-  align-items: left;
+  align-items: flex-start;
   height: 100%;
-}
-
-#showcase .category {
-  background: var(--sports-color);
-  width: 55px;
-  text-align: center;
 }
 
 #showcase p {
   margin-bottom: 1rem;
+  max-width: 500px;
 }
 
 #showcase .btn {
-  padding: 0.75rem;
+  padding: 0.75rem 1.5rem;
   background: var(--primary-color);
-  width: 130px;
-  text-align: center;
   color: #fff;
 }
 
 #showcase .btn:hover {
   background: #a81818;
 }
+
+
+/* Articles */
+
+.articles-container {
+  display: grid;
+  grid-gap: 1rem;
+}
+
+
+/* Footer */
+
+footer .logo {
+  width: 160px;
+  margin-bottom: 1rem;
+}
+
+.footer-col {
+  padding: 1rem 0;
+  border-bottom: 1px dotted #444;
+}
+
+.footer-col p {
+  margin-bottom: 1rem;
+}
+
+.footer-col input {
+  display: block;
+  padding: .5rem;
+  width: 100%;
+  margin-bottom: 0.75rem;
+}
+
+.footer-col .form-btn {
+  background: #c72727;
+  color: #fff;
+  border: none;
+}
+
+.footer-col .form-btn:hover {
+  background: #a81818;
+}
+
+.footer-col li {
+  padding: 1rem 0;
+  border-bottom: 1px dotted #444;
+}
+
+.footer-col li a {
+  color: #fff;
+}
+
+.footer-col li a:hover {
+  color: #c72727;
+}
+
+.footer-col:nth-child(3),
+.footer-col:last-child {
+  border: none;
+}
+
+.footer-col .btn {
+  display: inline-block;
+  background: #f99500;
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+}
+
+.footer-col .btn:hover {
+  background: #d17d00;
+}
+
+.main-footer {
+  background: #444;
+  text-align: center;
+  padding: 1.5rem;
+}
+
