--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,9 @@ h1, h2, h3, h4, h5, h6 {
   grid-gap: 1rem;
 }
 
+#articles .container {
+  padding: 2rem 1rem;
+}
 
 /* Footer */
 
@@ -200,6 +203,15 @@ footer .logo {
 
 .footer-col p {
   margin-bottom: 1rem;
+}
+
+.social-icons a {
+  color: #fff;
+  margin-right: 1rem;
+}
+
+.social-icons a:hover {
+  color: #ddd;
 }
 
 .footer-col input {
