--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) {
+@media (min-width: 600px) {
   #articles .container {
     padding: 2rem;
   }
@@ -22,4 +22,25 @@
     padding: 0;
   }
 
+  .articles-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .sub-footer {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1rem;
+  }
+
+  .footer-col {
+    border-bottom: none;
+    padding: 0 1rem 0 0;
+  }
+
+}
+
+@media (min-width: 1024px) {
+  .articles-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
